--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,3 +12,12 @@ img,
 video {
   display: block;
 }
+
+h1 {
+  color: #000;
+  font-family: Roboto;
+  font-size: 27px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 35px; /* 129.63% */
+}
