--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,3 +21,41 @@ h1 {
   font-weight: 400;
   line-height: 35px; /* 129.63% */
 }
+
+img {
+  width: 56px;
+  height: 56px;
+  border-radius: 28px;
+}
+
+.author {
+  display: flex;
+  width: 370px;
+  padding: 15px;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+}
+
+.date {
+  color: rgba(0, 0, 0, 0.5);
+  font-family: Roboto;
+  font-size: 16px;
+}
+
+p {
+  color: #000;
+  font-family: Roboto;
+  font-size: 20px;
+}
+
+.card {
+  display: flex;
+  width: 370px;
+  padding: 15px;
+  flex-direction: column;
+  gap: 20px;
+  border-radius: 25px;
+  background: #fff;
+  box-shadow: 0 4px 10px 10px rgba(0, 0, 0, 0.05);
+}
